# MegamisModules

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  plugin.json
.github/actions/build_linux/: Dockerfile
.github/actions/build_osx/: Dockerfile
.github/actions/build_win/: Dockerfile
.github/workflows/: buildDevelop.yml  buildRelease.yml
src/: ClockSync.cpp  plugin.cpp  plugin.hpp
